# nishan-gurung-ttb-label-verification

./: .env.example  .gitignore  AGENTS.md  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  comparison.py  config.py  main.py  models.py  verification.py  vision.py
backend/scripts/: phase6_live_check.py  run_vision_sample.py
backend/tests/: test_comparison.py  test_health.py  test_verify_endpoint.py  test_vision.py
frontend/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  constants.ts  styles.css  types.ts  utils.ts
frontend/src/components/flows/: BatchFlow.tsx  SingleFlow.tsx
frontend/src/components/forms/: ApplicationFields.tsx  ImagePicker.tsx  SubmitArea.tsx
frontend/src/components/results/: BatchSummaryView.tsx  FieldResultList.tsx  VerificationResultView.tsx
frontend/src/test/: setup.ts
