[project]
name = "ttb-label-verification-backend"
version = "0.1.0"
description = "FastAPI backend for the TTB Label Verification proof-of-concept."
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.6.17",
    "fastapi>=0.115.0",
    "pillow>=12.2.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
